--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@ascencio/shared": "github:ayunierto/ascencio-tax-shared#main",
     "@expo/vector-icons": "^15.0.3",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-community/datetimepicker": "8.4.4",
@@ -61,8 +62,7 @@
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "zod": "^3.25.76",
-    "zustand": "^5.0.8",
-    "@ascencio-tax/shared": "github:ayunierto/ascencio-tax-shared#main"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/luxon": "^3.7.1",
