--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ EXPO_PUBLIC_API_URL=https://your-api-url.com/api
 # IP Geolocation API Key
 # Get your API key from: https://ipapi.com/dashboard
 EXPO_PUBLIC_IP_API_KEY=your_ip_api_key_here
+
+# Cloudinary Configuration
+EXPO_PUBLIC_CLOUDINARY_CLOUD_NAME=dxhdxpzbf
