--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@hookform/resolvers": "^5.2.2",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/drawer": "^7.7.10",
+    "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.90.7",
     "axios": "^1.13.2",
-    "expo": "~54.0.23",
+    "expo": "~54.0.32",
     "expo-application": "~7.0.7",
     "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
@@ -37,7 +37,7 @@
     "expo-localization": "~17.0.7",
     "expo-mail-composer": "~15.0.7",
     "expo-media-library": "~18.2.0",
-    "expo-router": "~6.0.14",
+    "expo-router": "~6.0.22",
     "expo-secure-store": "~15.0.7",
     "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -74,6 +74,9 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
+  },
+  "overrides": {
+    "react-native-safe-area-context": "5.6.0"
   },
   "private": true
 }
