feat: implement Google Sign-In functionality and enhance user experience with error boundaries

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
+# Example environment variables for local development.
+# Copy this file to `.env` and fill real values. Do NOT commit secrets.
+
 # API Configuration
-EXPO_PUBLIC_API_URL=https://your-api-url.com/api
+# Use your API base URL (example: http://localhost:3000/api/v1 or https://api.example.com/api/v1)
+EXPO_PUBLIC_API_URL=https://your-api-url.com/api/v1
 
 # IP Geolocation API Key
 # Get your API key from: https://ipapi.com/dashboard
-EXPO_PUBLIC_IP_API_KEY=your_ip_api_key_here
+EXPO_PUBLIC_IP_API_KEY=YOUR_IP_API_KEY_HERE
 
 # Cloudinary Configuration
-EXPO_PUBLIC_CLOUDINARY_CLOUD_NAME=dxhdxpzbf
+# Replace with your Cloudinary cloud name
+EXPO_PUBLIC_CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
