--- a/app.json
+++ b/app.json
@@ -33,6 +33,12 @@
     "plugins": [
       "expo-router",
       [
+        "@react-native-google-signin/google-signin",
+        {
+          "iosUrlScheme": "com.googleusercontent.apps.1007923113225-bsg7866bal4u7rlt0e5fpkc2mgesm0aa"
+        }
+      ],
+      [
         "expo-splash-screen",
         {
           "image": "./assets/images/splash-icon.png",
