--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^15.0.3",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/elements": "^2.6.3",
@@ -24,8 +25,10 @@
     "axios": "^1.13.2",
     "expo": "~54.0.32",
     "expo-application": "~7.0.7",
+    "expo-auth-session": "~7.0.10",
     "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
+    "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.17",
     "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
